overflow-x bug fixed- no deep tests made

--- a/src/containers/Tests/tests.scss
+++ b/src/containers/Tests/tests.scss
@@ -2,7 +2,7 @@
 
 .patient-tests-container {
   @include page-size;
-  overflow-x: hidden;
+  //overflow-x: hidden;
 
   .table-wrapper {
     @include table-wrapper;
