--- a/src/styles/functions/_pages.scss
+++ b/src/styles/functions/_pages.scss
@@ -1,7 +1,8 @@
 @mixin page-size {
-  width: calc(100vw - #{$sidebar-width});
+  width: calc(96vw - #{$sidebar-width});
   min-height: calc(100vh - #{$header-height});
   top: $header-height;
-  left: $sidebar-width;
+  left: calc(15px + #{$sidebar-width});
+  //left: $sidebar-width;
   position: relative;
 }
